# securiterdanslesprojet

./: .env.example  .gitignore  GETTING-STARTED.md  README.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  download.py  upload.py
backend/app/core/: config.py  database.py  types.py
backend/app/middleware/: rate_limit.py  security_headers.py
backend/app/models/: __init__.py  audit_log.py  file.py
backend/app/schemas/: __init__.py  file.py
backend/app/services/: __init__.py  antivirus.py  encryption.py  storage.py  token_service.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_services.py
docs/: 01-EXIGENCES-SECURITE.md  02-ANALYSE-RISQUES.md  03-BACKLOG-SECURITE.md  04-KPIS-KRIS.md  05-ARCHITECTURE.md  06-MANUEL-DEPLOIEMENT.md  07-DOSSIER-FINAL.md  pipeline-live.html  pipeline-visual.html
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/pages/: Download.tsx  Home.tsx  Upload.tsx
infrastructure/postgres/: init.sql
infrastructure/prometheus/: prometheus.yml
